Add metrics, robustness fixes, and plotting tooling
- Added per-generation mean Δfitness+ / Δfitness− / net to CSV output.
- Fixed neutral mutation handling: changed break → continue in OffspringForEnvironment to prevent truncating offspring under neutral-range > 0.
- Added divide-by-zero guard for B/D ratio; NaN fitness is preserved when population hits zero for data integrity.
- Updated DataStream close logic to handle generic io.Writer via io.Closer assertion, improving robustness.
- Brought ContinuousChangeMax into config options (continuous step size now configurable).
- Enhanced plot_runs.py to generate summary stats, environment-edge snapshots, and more robust handling of NA/NaN.
- Added Go test coverage for:
  • No-mutation case
  • Neutral mutation offspring count consistency
  • Fitness mapping bounds
  • Continuous/discrete mutation value ranges
- Added Python plotting and CSV summarization tools in tools/ directory.
- General code cleanup and clarified CSV headers for easier downstream analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,31 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Python virtual envs
+.venv/
+venv/
+
+# Python junk
+__pycache__/
+*.pyc
+
+# Data output
+*.png
+*.csv
+data/csv/
+data/png/
+
+# Tools cache
+tools/__pycache__/
+
+# Additional Go build artifacts
+*.test
+*.out
+*.coverprofile
+# Comment out below if you want the binary commit to git
+implicit-genome-simulator-go  
+
+# Editors/OS
+.vscode/
+.DS_Store
