refactor: reorganize repo structure, add batch_sim workflow, update tooling
- Move entrypoint into Go-conventional layout:
  - main.go + config.go → cmd/evosim/
  - prepared cmd/sweep/ for future parameter sweeps
- Add scripts/ for helper runners:
  - scripts/batch_sim.sh for parallel multi-run batches
  - kept run_all.sh for scenario suite (nomut/allmut/static/etc.)
- Introduce data/runs/ with timestamped snapshots of CSV/PNG/summary outputs
  - working dirs remain in data/csv and data/png
  - .gitignore updated to exclude generated outputs but keep data/README.md
- Update Makefile:
  - build → bin/evosim
  - runs/plots/summaries targets point to new paths
  - new batch_sim target (parallel runs via scripts/batch_sim.sh)
  - new snapshot target for archiving current outputs
- Update README:
  - reflect cmd/evosim entrypoint
  - document new batch_sim usage and snapshot outputs
  - keep Customizing section for embedding the simulator
- Ruby summary script moved under tools/
- Plotting script unchanged but now writes summaries + plots into new structure
- General cleanup: neutral mutation fix, CSV header with #ARGS metadata,
  reproducible seeding, better logging of B/D ratio and Δfitness metrics

This brings the repo into a cleaner Go project layout, speeds up
experiments with full CPU utilization, and provides reproducible,
timestamped snapshots for analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -5,39 +5,38 @@
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binaries, coverage, and build artifacts
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.coverprofile
 
-# Dependency directories (remove the comment below to include it)
+# Go build output (comment out if you want binaries committed)
+implicit-genome-simulator-go
+evosim
+sweep
+
+# Dependency directories (uncomment to vendor deps)
 # vendor/
 
 # Python virtual envs
 .venv/
 venv/
 
-# Python junk
+# Python cache/junk
 __pycache__/
 *.pyc
+tools/__pycache__/
 
-# Data output
+# Data outputs (large/generated, keep only metadata/readme)
 *.png
 *.csv
 data/csv/
 data/png/
+data/summary.csv
+data/env_edges.csv
+data/runs/
+!data/README.md   # keep a stub/readme tracked
 
-# Tools cache
-tools/__pycache__/
-
-# Additional Go build artifacts
-*.test
-*.out
-*.coverprofile
-# Comment out below if you want the binary commit to git
-implicit-genome-simulator-go  
-
-# Editors/OS
+# Editors / OS
 .vscode/
 .DS_Store
